Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24075

Raster paint engine renders partly garbage with source composition and opacity on formats other than RGB32/ARGB32PM

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 5.0.0
    • GUI: Painting
    • None
    • Ubuntu 10.04, 64-bit
    • 5240055e087c9830ec6894089dfd57b09ba982bf

    Description

      When drawing an image or with a texture or pattern brush, with source composition, opacity less than 1 and target format different from RGB32 and ARGB32_Premultiplied, some garbage pixels appear and the opacity is ignored. It happens for all transformation types and with or without SmoothPixmapTransform. The bug does not appear if antialiasing is enabled.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkalland Kim Motoyoshi Kalland (Inactive)
            kkalland Kim Motoyoshi Kalland (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes