Fixed source composition with opacity in the raster paint engine.

Task-number: QTBUG-24075

Change-Id: I2b9263364bf30fb8c914823e80e7ea4a8af26035
Reviewed-by: Gunnar Sletta <gunnar.sletta@nokia.com>